#27 Touchpad UI updated

--- a/app/src/main/res/layout/action_touch_pad.xml
+++ b/app/src/main/res/layout/action_touch_pad.xml
@@ -15,18 +15,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/hWheel"
-            android:layout_width="match_parent"
-            android:background="@color/primary"
-            android:layout_height="0dp"
-            android:layout_weight="0.75"/>
-
         <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:layout_gravity="bottom"
             android:orientation="horizontal"
             android:weightSum="3">
@@ -36,16 +29,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1.125"
-                android:background="@color/black"
-                android:foreground="@color/black"
-                android:text="@string/leftBtn"
-                tools:ignore="NestedWeights" />
+                android:foreground="@drawable/button_background"
+                tools:ignore="NestedWeights,SpeakableTextPresentCheck" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/wheel"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@color/primary_dark"
+                android:background="@color/black"
                 android:layout_weight="0.75">
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -53,17 +44,23 @@
                 android:id="@+id/btnRight"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@color/black"
-                android:foreground="@color/black"
                 android:layout_weight="1.125"
-                android:text="@string/rightBtn" />
+                android:foreground="@drawable/button_background"
+                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
         </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/hWheel"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:foreground="@drawable/scrollbar_col" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/touchpad"
         android:layout_height="0dp"
-        android:background="@color/primary"
-        android:layout_weight="3.25"
+        android:foreground="@drawable/button_background"
+        android:layout_weight="3"
         android:layout_width="match_parent"/>
 
     </LinearLayout>
