--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#7A7676</color>
+    <color name="grey">#aaaaaa</color>
     <color name="transparent">#00000000</color>
 </resources>
