#3 Scan button UI updates

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,12 +37,11 @@
         android:id="@+id/imageView_wifiLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/textView_bottomText1"
+        app:layout_constraintBottom_toTopOf="@+id/scan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_appName"
-        app:layout_constraintVertical_bias="0.576"
         app:srcCompat="@drawable/ic_baseline_wifi"
         tools:ignore="ContentDescription,ImageContrastCheck" />
 
@@ -62,7 +61,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
-        android:text="Scan"
+        android:text="@string/scan"
+        android:textSize="20sp"
+        android:paddingHorizontal="28dp"
+        android:paddingVertical="12sp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/primary_dark"
         app:layout_constraintBottom_toTopOf="@+id/textView_bottomText1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
