--- a/app/src/main/res/layout/activity_keyboard.xml
+++ b/app/src/main/res/layout/activity_keyboard.xml
@@ -86,7 +86,7 @@
         android:textColor="@color/black"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
-        android:text="@string/insert"
+        android:text="@string/delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonInsert"
         app:layout_constraintTop_toBottomOf="@+id/buttonRShift" />
