#3 added buttons to switch between touch and keypad

--- a/app/src/main/res/layout/activity_keyboard.xml
+++ b/app/src/main/res/layout/activity_keyboard.xml
@@ -896,6 +896,6 @@
         android:backgroundTint="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_port"
+        app:srcCompat="@drawable/ic_port_keyboard"
         tools:ignore="ContentDescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
